@@ -6,6 +6,7 @@
 	<category label="Video">
 		<setting label="[B]Playback[/B]" type="lsep" />
 		<setting id="playbackqual" label="Select preferred playback video quality" type="enum" default="0" lvalues="30021|30022|30023"/>
+		<setting id="autoplayback" label="Auto playback first video source [Google Docs]" type="bool" default="true" />
 		<setting label="[B]Download[/B]" type="lsep" />
 		<setting label="Download path" type="folder" id="downloadPath"/>
 	</category>
